src/main/java/de/tudortmund/cs/iltis/folalib/io/parser/grammar/GrammarParser.java
// Generated from ../src/main/java/de/tudortmund/cs/iltis/folalib/io/parser/grammar/GrammarParser.g4
// by ANTLR 4.4
package de.tudortmund.cs.iltis.folalib.io.parser.grammar;

import de.tudortmund.cs.iltis.utils.io.parser.general.AbstractParser;
import java.util.ArrayList;
import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends AbstractParser {
    static {
        RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int WHITESPACE = 1,
            SYMBOL_CONCATENATION = 2,
            SYMBOL = 3,
            PRODUCTION_ARROW = 4,
            LINE_SEPARATOR = 5,
            RIGHT_SIDE_SEPARATOR = 6,
            EPSILON = 7;
    public static final String[] tokenNames = {
        "<INVALID>",
        "WHITESPACE",
        "SYMBOL_CONCATENATION",
        "SYMBOL",
        "PRODUCTION_ARROW",
        "LINE_SEPARATOR",
        "RIGHT_SIDE_SEPARATOR",
        "EPSILON"
    };
    public static final int RULE_entry = 0,
            RULE_initGrammar = 1,
            RULE_productionLine = 2,
            RULE_rhsWithMultipleSeparatorsCheck = 3,
            RULE_rhsSeparators = 4,
            RULE_symSepEps = 5,
            RULE_sententialForm = 6,
            RULE_sententialFormOrEmtpy = 7;
    public static final String[] ruleNames = {
        "entry", "initGrammar", "productionLine", "rhsWithMultipleSeparatorsCheck",
        "rhsSeparators", "symSepEps", "sententialForm", "sententialFormOrEmtpy"
    };

    @Override
    public String getGrammarFileName() {
        return "GrammarParser.g4";
    }

    @Override
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public GrammarParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class EntryContext extends ParserRuleContext {
        public InitGrammarContext initGrammar() {
            return getRuleContext(InitGrammarContext.class, 0);
        }

        public EntryContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_entry;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor).visitEntry(this);
            else return visitor.visitChildren(this);
        }
    }

    public final EntryContext entry() throws RecognitionException {
        EntryContext _localctx = new EntryContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_entry);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(16);
                initGrammar();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class InitGrammarContext extends ParserRuleContext {
        public InitGrammarContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_initGrammar;
        }

        public InitGrammarContext() {}

        public void copyFrom(InitGrammarContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class EmptyGrammarERRORContext extends InitGrammarContext {
        public TerminalNode LINE_SEPARATOR(int i) {
            return getToken(GrammarParser.LINE_SEPARATOR, i);
        }

        public TerminalNode EOF() {
            return getToken(GrammarParser.EOF, 0);
        }

        public List<TerminalNode> LINE_SEPARATOR() {
            return getTokens(GrammarParser.LINE_SEPARATOR);
        }

        public EmptyGrammarERRORContext(InitGrammarContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor).visitEmptyGrammarERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class CorrectGrammarContext extends InitGrammarContext {
        public ProductionLineContext productionLine;
        public List<ProductionLineContext> lines = new ArrayList<ProductionLineContext>();

        public TerminalNode LINE_SEPARATOR(int i) {
            return getToken(GrammarParser.LINE_SEPARATOR, i);
        }

        public TerminalNode EOF() {
            return getToken(GrammarParser.EOF, 0);
        }

        public List<ProductionLineContext> productionLine() {
            return getRuleContexts(ProductionLineContext.class);
        }

        public ProductionLineContext productionLine(int i) {
            return getRuleContext(ProductionLineContext.class, i);
        }

        public List<TerminalNode> LINE_SEPARATOR() {
            return getTokens(GrammarParser.LINE_SEPARATOR);
        }

        public CorrectGrammarContext(InitGrammarContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor).visitCorrectGrammar(this);
            else return visitor.visitChildren(this);
        }
    }

    public final InitGrammarContext initGrammar() throws RecognitionException {
        InitGrammarContext _localctx = new InitGrammarContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_initGrammar);
        int _la;
        try {
            int _alt;
            setState(45);
            switch (_input.LA(1)) {
                case SYMBOL:
                case PRODUCTION_ARROW:
                case RIGHT_SIDE_SEPARATOR:
                case EPSILON:
                    _localctx = new CorrectGrammarContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(18);
                        ((CorrectGrammarContext) _localctx).productionLine = productionLine();
                        ((CorrectGrammarContext) _localctx)
                                .lines.add(((CorrectGrammarContext) _localctx).productionLine);
                        setState(27);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                        while (_alt != 2
                                && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                            if (_alt == 1) {
                                {
                                    {
                                        setState(20);
                                        _errHandler.sync(this);
                                        _la = _input.LA(1);
                                        do {
                                            {
                                                {
                                                    setState(19);
                                                    match(LINE_SEPARATOR);
                                                }
                                            }
                                            setState(22);
                                            _errHandler.sync(this);
                                            _la = _input.LA(1);
                                        } while (_la == LINE_SEPARATOR);
                                        setState(24);
                                        ((CorrectGrammarContext) _localctx).productionLine =
                                                productionLine();
                                        ((CorrectGrammarContext) _localctx)
                                                .lines.add(
                                                        ((CorrectGrammarContext) _localctx)
                                                                .productionLine);
                                    }
                                }
                            }
                            setState(29);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                        }
                        setState(33);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == LINE_SEPARATOR) {
                            {
                                {
                                    setState(30);
                                    match(LINE_SEPARATOR);
                                }
                            }
                            setState(35);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(36);
                        match(EOF);
                    }
                    break;
                case EOF:
                case LINE_SEPARATOR:
                    _localctx = new EmptyGrammarERRORContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(41);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == LINE_SEPARATOR) {
                            {
                                {
                                    setState(38);
                                    match(LINE_SEPARATOR);
                                }
                            }
                            setState(43);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(44);
                        match(EOF);
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProductionLineContext extends ParserRuleContext {
        public ProductionLineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_productionLine;
        }

        public ProductionLineContext() {}

        public void copyFrom(ProductionLineContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class NoProductionArrowERRORContext extends ProductionLineContext {
        public SymSepEpsContext arbitrarySymbols;

        public SymSepEpsContext symSepEps(int i) {
            return getRuleContext(SymSepEpsContext.class, i);
        }

        public List<SymSepEpsContext> symSepEps() {
            return getRuleContexts(SymSepEpsContext.class);
        }

        public NoProductionArrowERRORContext(ProductionLineContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor)
                        .visitNoProductionArrowERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class LeftSideMissingERRORContext extends ProductionLineContext {
        public Token arrow;

        public List<RhsSeparatorsContext> rhsSeparators() {
            return getRuleContexts(RhsSeparatorsContext.class);
        }

        public TerminalNode PRODUCTION_ARROW() {
            return getToken(GrammarParser.PRODUCTION_ARROW, 0);
        }

        public RhsSeparatorsContext rhsSeparators(int i) {
            return getRuleContext(RhsSeparatorsContext.class, i);
        }

        public RhsWithMultipleSeparatorsCheckContext rhsWithMultipleSeparatorsCheck() {
            return getRuleContext(RhsWithMultipleSeparatorsCheckContext.class, 0);
        }

        public LeftSideMissingERRORContext(ProductionLineContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor)
                        .visitLeftSideMissingERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class CorrectProductionContext extends ProductionLineContext {
        public SententialFormContext lhs;

        public SententialFormContext sententialForm() {
            return getRuleContext(SententialFormContext.class, 0);
        }

        public TerminalNode PRODUCTION_ARROW() {
            return getToken(GrammarParser.PRODUCTION_ARROW, 0);
        }

        public RhsWithMultipleSeparatorsCheckContext rhsWithMultipleSeparatorsCheck() {
            return getRuleContext(RhsWithMultipleSeparatorsCheckContext.class, 0);
        }

        public CorrectProductionContext(ProductionLineContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor).visitCorrectProduction(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ProductionWithSeparatorLeftERRORContext extends ProductionLineContext {
        public SententialFormContext lhs;

        public RhsSeparatorsContext rhsSeparators() {
            return getRuleContext(RhsSeparatorsContext.class, 0);
        }

        public SententialFormContext sententialForm() {
            return getRuleContext(SententialFormContext.class, 0);
        }

        public TerminalNode PRODUCTION_ARROW() {
            return getToken(GrammarParser.PRODUCTION_ARROW, 0);
        }

        public RhsWithMultipleSeparatorsCheckContext rhsWithMultipleSeparatorsCheck() {
            return getRuleContext(RhsWithMultipleSeparatorsCheckContext.class, 0);
        }

        public ProductionWithSeparatorLeftERRORContext(ProductionLineContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor)
                        .visitProductionWithSeparatorLeftERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class RightSideSeparatorOnLhsERRORContext extends ProductionLineContext {
        public Token errorSeparator;

        public TerminalNode SYMBOL(int i) {
            return getToken(GrammarParser.SYMBOL, i);
        }

        public TerminalNode RIGHT_SIDE_SEPARATOR() {
            return getToken(GrammarParser.RIGHT_SIDE_SEPARATOR, 0);
        }

        public SymSepEpsContext symSepEps(int i) {
            return getRuleContext(SymSepEpsContext.class, i);
        }

        public TerminalNode PRODUCTION_ARROW() {
            return getToken(GrammarParser.PRODUCTION_ARROW, 0);
        }

        public List<TerminalNode> EPSILON() {
            return getTokens(GrammarParser.EPSILON);
        }

        public List<SymSepEpsContext> symSepEps() {
            return getRuleContexts(SymSepEpsContext.class);
        }

        public List<TerminalNode> SYMBOL() {
            return getTokens(GrammarParser.SYMBOL);
        }

        public TerminalNode EPSILON(int i) {
            return getToken(GrammarParser.EPSILON, i);
        }

        public RightSideSeparatorOnLhsERRORContext(ProductionLineContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor)
                        .visitRightSideSeparatorOnLhsERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ProductionWithSeparatorBothERRORContext extends ProductionLineContext {
        public SententialFormContext lhs;

        public List<RhsSeparatorsContext> rhsSeparators() {
            return getRuleContexts(RhsSeparatorsContext.class);
        }

        public SententialFormContext sententialForm() {
            return getRuleContext(SententialFormContext.class, 0);
        }

        public TerminalNode PRODUCTION_ARROW() {
            return getToken(GrammarParser.PRODUCTION_ARROW, 0);
        }

        public RhsSeparatorsContext rhsSeparators(int i) {
            return getRuleContext(RhsSeparatorsContext.class, i);
        }

        public RhsWithMultipleSeparatorsCheckContext rhsWithMultipleSeparatorsCheck() {
            return getRuleContext(RhsWithMultipleSeparatorsCheckContext.class, 0);
        }

        public ProductionWithSeparatorBothERRORContext(ProductionLineContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor)
                        .visitProductionWithSeparatorBothERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class MultipleProductionArrowsERRORContext extends ProductionLineContext {
        public Token second;

        public SymSepEpsContext symSepEps(int i) {
            return getRuleContext(SymSepEpsContext.class, i);
        }

        public TerminalNode PRODUCTION_ARROW(int i) {
            return getToken(GrammarParser.PRODUCTION_ARROW, i);
        }

        public List<TerminalNode> PRODUCTION_ARROW() {
            return getTokens(GrammarParser.PRODUCTION_ARROW);
        }

        public List<SymSepEpsContext> symSepEps() {
            return getRuleContexts(SymSepEpsContext.class);
        }

        public MultipleProductionArrowsERRORContext(ProductionLineContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor)
                        .visitMultipleProductionArrowsERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class RightSideMissingERRORContext extends ProductionLineContext {
        public SententialFormContext lhs;
        public Token arrow;

        public RhsSeparatorsContext rhsSeparators() {
            return getRuleContext(RhsSeparatorsContext.class, 0);
        }

        public SententialFormContext sententialForm() {
            return getRuleContext(SententialFormContext.class, 0);
        }

        public TerminalNode PRODUCTION_ARROW() {
            return getToken(GrammarParser.PRODUCTION_ARROW, 0);
        }

        public RightSideMissingERRORContext(ProductionLineContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor)
                        .visitRightSideMissingERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ProductionWithSeparatorRightERRORContext extends ProductionLineContext {
        public SententialFormContext lhs;

        public RhsSeparatorsContext rhsSeparators() {
            return getRuleContext(RhsSeparatorsContext.class, 0);
        }

        public SententialFormContext sententialForm() {
            return getRuleContext(SententialFormContext.class, 0);
        }

        public TerminalNode PRODUCTION_ARROW() {
            return getToken(GrammarParser.PRODUCTION_ARROW, 0);
        }

        public RhsWithMultipleSeparatorsCheckContext rhsWithMultipleSeparatorsCheck() {
            return getRuleContext(RhsWithMultipleSeparatorsCheckContext.class, 0);
        }

        public ProductionWithSeparatorRightERRORContext(ProductionLineContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor)
                        .visitProductionWithSeparatorRightERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class BothSidesMissingERRORContext extends ProductionLineContext {
        public Token arrow;

        public RhsSeparatorsContext rhsSeparators() {
            return getRuleContext(RhsSeparatorsContext.class, 0);
        }

        public TerminalNode PRODUCTION_ARROW() {
            return getToken(GrammarParser.PRODUCTION_ARROW, 0);
        }

        public BothSidesMissingERRORContext(ProductionLineContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor)
                        .visitBothSidesMissingERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProductionLineContext productionLine() throws RecognitionException {
        ProductionLineContext _localctx = new ProductionLineContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_productionLine);
        int _la;
        try {
            setState(130);
            switch (getInterpreter().adaptivePredict(_input, 17, _ctx)) {
                case 1:
                    _localctx = new CorrectProductionContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(47);
                        ((CorrectProductionContext) _localctx).lhs = sententialForm();
                        setState(48);
                        match(PRODUCTION_ARROW);
                        setState(49);
                        rhsWithMultipleSeparatorsCheck();
                    }
                    break;
                case 2:
                    _localctx = new ProductionWithSeparatorRightERRORContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(51);
                        ((ProductionWithSeparatorRightERRORContext) _localctx).lhs =
                                sententialForm();
                        setState(52);
                        match(PRODUCTION_ARROW);
                        setState(53);
                        rhsWithMultipleSeparatorsCheck();
                        setState(54);
                        rhsSeparators();
                    }
                    break;
                case 3:
                    _localctx = new ProductionWithSeparatorLeftERRORContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(56);
                        ((ProductionWithSeparatorLeftERRORContext) _localctx).lhs =
                                sententialForm();
                        setState(57);
                        match(PRODUCTION_ARROW);
                        setState(58);
                        rhsSeparators();
                        setState(59);
                        rhsWithMultipleSeparatorsCheck();
                    }
                    break;
                case 4:
                    _localctx = new ProductionWithSeparatorBothERRORContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                    {
                        setState(61);
                        ((ProductionWithSeparatorBothERRORContext) _localctx).lhs =
                                sententialForm();
                        setState(62);
                        match(PRODUCTION_ARROW);
                        setState(63);
                        rhsSeparators();
                        setState(64);
                        rhsWithMultipleSeparatorsCheck();
                        setState(65);
                        rhsSeparators();
                    }
                    break;
                case 5:
                    _localctx = new LeftSideMissingERRORContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                    {
                        setState(67);
                        ((LeftSideMissingERRORContext) _localctx).arrow = match(PRODUCTION_ARROW);
                        setState(69);
                        _la = _input.LA(1);
                        if (_la == RIGHT_SIDE_SEPARATOR) {
                            {
                                setState(68);
                                rhsSeparators();
                            }
                        }

                        setState(71);
                        rhsWithMultipleSeparatorsCheck();
                        setState(73);
                        _la = _input.LA(1);
                        if (_la == RIGHT_SIDE_SEPARATOR) {
                            {
                                setState(72);
                                rhsSeparators();
                            }
                        }
                    }
                    break;
                case 6:
                    _localctx = new RightSideMissingERRORContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                    {
                        setState(75);
                        ((RightSideMissingERRORContext) _localctx).lhs = sententialForm();
                        setState(76);
                        ((RightSideMissingERRORContext) _localctx).arrow = match(PRODUCTION_ARROW);
                        setState(78);
                        _la = _input.LA(1);
                        if (_la == RIGHT_SIDE_SEPARATOR) {
                            {
                                setState(77);
                                rhsSeparators();
                            }
                        }
                    }
                    break;
                case 7:
                    _localctx = new BothSidesMissingERRORContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                    {
                        setState(80);
                        ((BothSidesMissingERRORContext) _localctx).arrow = match(PRODUCTION_ARROW);
                        setState(82);
                        _la = _input.LA(1);
                        if (_la == RIGHT_SIDE_SEPARATOR) {
                            {
                                setState(81);
                                rhsSeparators();
                            }
                        }
                    }
                    break;
                case 8:
                    _localctx = new RightSideSeparatorOnLhsERRORContext(_localctx);
                    enterOuterAlt(_localctx, 8);
                    {
                        setState(87);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == SYMBOL || _la == EPSILON) {
                            {
                                {
                                    setState(84);
                                    _la = _input.LA(1);
                                    if (!(_la == SYMBOL || _la == EPSILON)) {
                                        _errHandler.recoverInline(this);
                                    }
                                    consume();
                                }
                            }
                            setState(89);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(90);
                        ((RightSideSeparatorOnLhsERRORContext) _localctx).errorSeparator =
                                match(RIGHT_SIDE_SEPARATOR);
                        setState(94);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while ((((_la) & ~0x3f) == 0
                                && ((1L << _la)
                                                & ((1L << SYMBOL)
                                                        | (1L << RIGHT_SIDE_SEPARATOR)
                                                        | (1L << EPSILON)))
                                        != 0)) {
                            {
                                {
                                    setState(91);
                                    symSepEps();
                                }
                            }
                            setState(96);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(97);
                        match(PRODUCTION_ARROW);
                        setState(101);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while ((((_la) & ~0x3f) == 0
                                && ((1L << _la)
                                                & ((1L << SYMBOL)
                                                        | (1L << RIGHT_SIDE_SEPARATOR)
                                                        | (1L << EPSILON)))
                                        != 0)) {
                            {
                                {
                                    setState(98);
                                    symSepEps();
                                }
                            }
                            setState(103);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                    break;
                case 9:
                    _localctx = new MultipleProductionArrowsERRORContext(_localctx);
                    enterOuterAlt(_localctx, 9);
                    {
                        setState(107);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while ((((_la) & ~0x3f) == 0
                                && ((1L << _la)
                                                & ((1L << SYMBOL)
                                                        | (1L << RIGHT_SIDE_SEPARATOR)
                                                        | (1L << EPSILON)))
                                        != 0)) {
                            {
                                {
                                    setState(104);
                                    symSepEps();
                                }
                            }
                            setState(109);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(110);
                        match(PRODUCTION_ARROW);
                        setState(114);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while ((((_la) & ~0x3f) == 0
                                && ((1L << _la)
                                                & ((1L << SYMBOL)
                                                        | (1L << RIGHT_SIDE_SEPARATOR)
                                                        | (1L << EPSILON)))
                                        != 0)) {
                            {
                                {
                                    setState(111);
                                    symSepEps();
                                }
                            }
                            setState(116);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(117);
                        ((MultipleProductionArrowsERRORContext) _localctx).second =
                                match(PRODUCTION_ARROW);
                        setState(122);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while ((((_la) & ~0x3f) == 0
                                && ((1L << _la)
                                                & ((1L << SYMBOL)
                                                        | (1L << PRODUCTION_ARROW)
                                                        | (1L << RIGHT_SIDE_SEPARATOR)
                                                        | (1L << EPSILON)))
                                        != 0)) {
                            {
                                setState(120);
                                switch (_input.LA(1)) {
                                    case SYMBOL:
                                    case RIGHT_SIDE_SEPARATOR:
                                    case EPSILON:
                                        {
                                            setState(118);
                                            symSepEps();
                                        }
                                        break;
                                    case PRODUCTION_ARROW:
                                        {
                                            setState(119);
                                            match(PRODUCTION_ARROW);
                                        }
                                        break;
                                    default:
                                        throw new NoViableAltException(this);
                                }
                            }
                            setState(124);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                    break;
                case 10:
                    _localctx = new NoProductionArrowERRORContext(_localctx);
                    enterOuterAlt(_localctx, 10);
                    {
                        setState(126);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(125);
                                    ((NoProductionArrowERRORContext) _localctx).arbitrarySymbols =
                                            symSepEps();
                                }
                            }
                            setState(128);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while ((((_la) & ~0x3f) == 0
                                && ((1L << _la)
                                                & ((1L << SYMBOL)
                                                        | (1L << RIGHT_SIDE_SEPARATOR)
                                                        | (1L << EPSILON)))
                                        != 0));
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RhsWithMultipleSeparatorsCheckContext extends ParserRuleContext {
        public SententialFormContext sententialForm;
        public List<SententialFormContext> rhs = new ArrayList<SententialFormContext>();

        public List<RhsSeparatorsContext> rhsSeparators() {
            return getRuleContexts(RhsSeparatorsContext.class);
        }

        public List<SententialFormContext> sententialForm() {
            return getRuleContexts(SententialFormContext.class);
        }

        public RhsSeparatorsContext rhsSeparators(int i) {
            return getRuleContext(RhsSeparatorsContext.class, i);
        }

        public SententialFormContext sententialForm(int i) {
            return getRuleContext(SententialFormContext.class, i);
        }

        public RhsWithMultipleSeparatorsCheckContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_rhsWithMultipleSeparatorsCheck;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarParserVisitor)
                return ((GrammarParserVisitor<? extends T>) visitor)
                        .visitRhsWithMultipleSeparatorsCheck(this);
            else return visitor.visitChildren(this);
        }
    }
